<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_icm20948</name>
  <version>0.0.2</version>
  <description>Driver for the ICM-20948 IMU</description>
  <!-- Original/upstream code credits: maintainer email="simon-pierre.deschenes.1@ulaval.ca">Simon-Pierre Deschênes</maintainer -->
  <maintainer email="slg@quakemap.com">Sergei Grichine</maintainer>
  <license>BSD-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python3-smbus2</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
